--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -103,11 +103,13 @@
             android:layout_alignTop="@+id/buttonSalvar"
             android:layout_alignParentStart="true"
             android:layout_marginLeft="95dp"
-            android:layout_marginStart="95dp" />
+            android:layout_marginStart="95dp"
+            android:text="cancelar"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="salvar"
             android:id="@+id/buttonSalvar"
             android:layout_centerVertical="true"
             />
