--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -119,7 +119,8 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginLeft="95dp"
-            android:layout_marginStart="95dp" />
+            android:layout_marginStart="95dp"
+            android:text="cancelar"/>
 
         <Button
             android:layout_width="wrap_content"
